<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Questions">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="20sp"
        android:textColor="#fff"
        android:background="#000"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#faebd7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id = "@+id/q1t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/True"/>
                <RadioButton
                    android:id = "@+id/q1f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/False"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id = "@+id/q2a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moses"/>
                <RadioButton
                    android:id = "@+id/q2b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jonah"/>
                <RadioButton
                    android:id = "@+id/q2c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noah"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3"/>

            <EditText
                android:id = "@+id/q3text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"/>

            <CheckBox
                android:id = "@+id/q4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malachi"/>
            <CheckBox
                android:id = "@+id/q4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zephaniah"/>
            <CheckBox
                android:id = "@+id/q4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isaiah"/>
            <CheckBox
                android:id = "@+id/q4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habakkuk"/>
            <CheckBox
                android:id = "@+id/q4e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job"/>
            <CheckBox
                android:id = "@+id/q4f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nehemiah"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id = "@+id/q5t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/True"/>
                <RadioButton
                    android:id = "@+id/q5f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/False"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6"/>

            <EditText
                android:id = "@+id/q6text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:onClick="submitButton"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id = "@+id/scoreSet"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:onClick="reset" />
                <Button
                    android:id="@+id/answerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_answers"
                    android:onClick="answers" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
